# lms-llmsTxt

./: .browser-echo-mcp.json  .codefetchignore  .env.example  .gitignore  AGENTS.md  CI pytest installation fix.md  Handling Reasoning in Models.md  LLMs.txt_Artifact_Issues.md  Link discovery structure.md  MANIFEST.in  PLAN.md  README.md  codefetch.config.mjs  codex-path.txt  failing-tests.txt  inspector.config.json  llms_txt_generation_dspy_tutorial.md  lmstxt-usage.md  lmstxt.txt  package.json  pnpm-lock.yaml  pyproject.toml  pytest.txt  readme_fix-for-rendering-view.md  refactoring_directive.md  rename-the-distribution-in-pyproject.toml.md  repos.md  rspress.config.mjs
.ai/: README.md
.archived/docs/: current-state-2026-05-08.md  state-consolidation-2026-04-30.md  state-consolidation-2026-05-08.md
.clinerules/: taskmaster.md
.codefetch/artifacts/: test-review-review.md  test-review-snapshot.md  test-review-tickets.md
.github/workflows/: publish-testpypi.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 91247dbc-8f8e-4a84-8a05-7b2f214f9859.json  e1e81af2-8836-4d47-a367-623bed7eb986.json
.peer-review/: Hypergraph Integration Critique.md
.planning/: STATE.md
.ruler/: AGENTS.md  Agent-guardrails.md  Preventing-Stale-Runs_hookify.md  agent-policy.md  codebase-search.md  missin-docs-use-mcp.md  skill-usage.md
.serena/: indexed-search.sh  project.yml
.taskmaster/: config.json  state.json
.tickets/: Clarify lmstxt MCP usage.md  GitHub Repo Authentication.md  MCP Callable Standardization.md  YAML Frontmatter for Artifacts.md  artifacts-and-http.md  lms_ls.md  standardize-mcp-dist.md
ROADMAP/: Improving llms-txt Application.md  Integrating dspy.RLM in Code.md
artifacts/: ai-llms.json  repos.md
docs/: Collect links in artifacts.md  README.md  _nav.json  architecture.md  current-state.md  feature-request.md  getting-started.md  index.mdx  langchain-repos.md  mcp-inspector-payloads.jsonl  mcp-inspector-payloads.md  oracle-pack-2026-01-04.md  patterns.md  publishing.md  repo-architecture-infer-2026-01-04.md  repos.md  scratchpad.md  standards.md  state-consolidation-2026-04-30.md  state-consolidation-2026-05-08.md  strategist-questions-oracle-pack-2026-01-03.md  task-master-inspector-payloads.md  timeout_analysis.md  universal-codebase-analyzer-2026-01-15.md
hypergraph/: .gitignore  README.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
oracle-out/: 01-permissions-validate-output-dir.md  02-observability-server-logging.md  03-failure-modes-run-generation.md  04-feature-flags-appconfig.md  05-failure-modes-fetch-models.md  06-ux-flows-cli-main.md  07-caching-state-runstore.md  08-invariants-owner-repo-from-url.md  09-failure-modes-build-llms-full.md  10-background-jobs-cleanup-worker.md  11-contracts-runrecord.md  12-caching-state-global-lock.md  13-contracts-llms-json-schema.md  14-permissions-allowed-root.md  15-background-jobs-spawn-background.md  16-caching-state-lm-auto-unload.md  17-feature-flags-env-flag.md  18-observability-pipeline-logging.md  19-ux-flows-artifact-reading.md  20-migrations-unknown.md
scripts/: clean_repos_md.py  collect-readmes-with-repo-list-and-graph.sh  install.sh  queue_run.py  repos.md  task-master-workflow.sh  taskmaster_codex_diag.sh  taskmaster_codex_diag_v2.sh  taskmaster_codex_diag_v3.sh
src/: AGENTS.md
tests/: conftest.py  smoke_test.py  test_analyzer.py  test_analyzer_integration.py  test_cli_ui.py  test_config.py  test_context_budget.py  test_evaluation.py  test_full_builder.py  test_github_ignore_paths.py  test_graph_builder.py  test_graph_dspy_synthesizer.py  test_graph_resources.py  test_graph_semantic_synthesizer.py  test_live_test_boundaries.py  test_llmstxt_mcp_artifacts.py  test_llmstxt_mcp_artifacts_integration.py  test_llmstxt_mcp_artifacts_scan.py  test_llmstxt_mcp_capabilities.py  test_llmstxt_mcp_config.py  test_llmstxt_mcp_generate_signature.py  test_llmstxt_mcp_generator.py  test_llmstxt_mcp_models.py  test_llmstxt_mcp_runs.py  test_llmstxt_mcp_security_hashing.py  test_llmstxt_mcp_server.py  test_lmstudio.py  test_lmstudio_integration.py  test_lmstxt_config.py  test_mcp_stdio.py  test_mcp_tool_execution.py  test_reasoning.py  test_repo_digest.py  test_retry_policy.py  test_rlm_evaluation.py  test_rollout_compatibility.py  test_session_memory.py
(+1058 files in other folders)
