[project]
name = "lms-llmsTxt"
dynamic = ["version"]
description = "LM Studio-powered llms.txt generator based on DSPy tutorials."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy-ai==3.2.0",
    "litellm",
    "python-dotenv",
    "requests==2.33.1",
    "lmstudio==1.5.0",
    "llm-ctx==0.0.1",
    "llms-txt==0.0.6",
    "mcp==1.27.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.2"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]
test = [
    "pytest==9.0.3",
]

[project.scripts]
lmstxt = "lms_llmsTxt.cli:main"
lmstxt-mcp = "lms_llmsTxt_mcp.server:main"

[build-system]
requires = ["setuptools>=67", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
addopts = [
    "-m",
    "not packaging",
]
markers = [
    "integration: marks tests as integration tests (slow)",
    "packaging: marks package install smoke tests (slow, release-gate)",
]
filterwarnings = [
    # DSPy 3.2.0 emits this from its own avatar helper signatures at import time.
    # The project signatures use desc=... and do not pass deprecated prefix=....
    "ignore:The 'prefix' argument in InputField/OutputField is deprecated and has no effect in DSPy:DeprecationWarning:dspy\\.",
    # LiteLLM 1.82.6 still emits this from its service logger on Python 3.13.
    "ignore:There is no current event loop:DeprecationWarning:litellm\\._service_logger",
]

# uv index example for TestPyPI; keep if you publish snapshots there.
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true